formatting and word count

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -20,12 +20,20 @@
 % REFERENCES
     \usepackage[firstinits=true, backend=biber, style=authoryear, maxcitenames=2, url=false, isbn=false, doi=true, eprint=false]{biblatex}
     \DeclareNameAlias{sortname}{last-first}
+    \DeclareSourcemap{				% this prints url for webpage references
+ 	 \maps[datatype=bibtex, overwrite=true]{
+  	  \map{
+   	   \step[fieldsource=url, final]
+   	   \step[typesource=misc, typetarget=online]
+    }
+  }
+}
 
     \addbibresource{../../../../BibTex_files/03_Chapter3.bib}
 
 % GRAPHICS
-    \usepackage{graphicx} % More advanced figure inclusion
-    \usepackage{float} % For specifying table/figure locations, i.e. [ht!]
+    \usepackage{graphicx} % More advanced Fig. inclusion
+    \usepackage{float} % For specifying table/Fig. locations, i.e. [ht!]
     \usepackage{changepage}
     \usepackage[table,xcdraw]{xcolor}
 
@@ -63,9 +71,15 @@
 
 \noindent
 Number of words - Abstract: 225\\
-Number of words - main text: X\\
-3 Figures in main text.\\
-Number of references: X\\
+Number of words - main text: 5934\\
+3 Figures. in main text.\\
+Number of references: 63\\
+
+% Intro = 740
+% Methods = 3192 
+% Results = 979
+% Discussion = 1023
+% 5934 total + 90 header + 468 captions
 
 \noindent
 \textbf{Keywords:} Annual plants, competition, facilitation, interaction strength, network, non-trophic, population dynamics, species interactions.  
@@ -241,7 +255,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
         \textbf{We first evaluated convergence of the NDD-only model, the RI-only model, and the joint NDD-RI model when fit to simulated data created with the \texttt{simul\_data()} function available in this project's associated GitHub repository. In these test fits, we ran the models with 4 chains and 3000 iterations, of which the first 2000 were discarded. We varied the total number of species and the proportion of unidentifiable interactions across our simulated datasets; when fitting the NDDM-only model, unidentifiable interactions were assigned a value $\beta_{i,j} = 0$. We observed good convergence of the $\gamma$ and $B$ parameters in all models as evaluated by the $\hat{R}$ statistic ($\hat{R} < 1.01$) and visual inspection of traceplots (results not shown here).
         As expected for the RI-only model and the joint model, our latent variables $r$ and $e$ often showed sign switching. This means that different MCMC chains returned coefficient values which are of the same magnitude but with opposing signs. Whilst this affects the $\hat{R}$ statistic of these $r$ and $e$ parameters, it does not affect the convergence of the resulting interaction parameters (i.e.\ $r_i e_j$), hence why we excluded $r$ and $e$ from our evaluation of convergence. Convergence was slightly more difficult to achieve with certain simulated datasets but this was solved by increasing the \texttt{adapt\_delta} argument, hinting at potentially problematic geometry of the posteriors.}
         % DBS: I don't know if the last sentence is detailed enough. Shouldn't we at least give a hint about what "certain simulated datasets" shared in common? I'm imagining something like "...certain simulated datasets (e.g., when X was big) but this..." Alternatively, we do into more detail below so I would consider just removing this last sentence and ending with the sentence that ends "...hence why we excluded...".
-        
+
         % DBS: Do we need to show evidence of this somewhere in the supps? If not, should we add (results not shown here) at the end of the previous sentence?
 
 
@@ -271,10 +285,10 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \subsection{Case study results}
 
     \paragraph{}
-    The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM. When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}). This is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. \textit{Interaction estimates between focal species were scaled according to the annual plant population model (Supplementary Methods \ref{SI:casestudy}) into interaction strengths affecting population growth,} and we sampled from each resulting interaction strength distributions to create 1000 samples of the scaled community interaction matrix.
+    The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM. When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Fig. \ref{fig:ppcheckmu2}). This is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Fig. \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. \textbf{Interaction estimates between focal species were scaled according to the annual plant population model (Supplementary Methods \ref{SI:casestudy}) into interaction strengths affecting population growth,} and we sampled from each resulting interaction strength distributions to create 1000 samples of the scaled community interaction matrix.
 
     \paragraph{}
-    For our case study, the resulting scaled community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction across all samples. Overall, the median strength for 55.2\% of focal $\times$ focal interactions were competitive, making competition the dominant interaction type. The median of 44.8\% of focal $\times$ focal interactions, however, were facilitative. As a result, the median of 48.1\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates its own performance. \textbf{Median intraspecific interaction strength was competitive for $15$ focal species (68.2\%), and facilitative for the remaining $7$ (31.8\%)}. For 11 of our 22 focal species, the scaled distributions of intraspecific effects did not overlap with $0$, suggesting that individuals of those species have a non-trivial effect on other individuals of the same species. \textbf{When considering interspecific interactions with neighbouring focal species, the proportion which did not overlap with $0$ dropped to 32.3\%.}
+    For our case study, the resulting scaled community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figs. \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction across all samples. Overall, the median strength for 55.2\% of focal $\times$ focal interactions were competitive, making competition the dominant interaction type. The median of 44.8\% of focal $\times$ focal interactions, however, were facilitative. As a result, the median of 48.1\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates its own performance. \textbf{Median intraspecific interaction strength was competitive for $15$ focal species (68.2\%), and facilitative for the remaining $7$ (31.8\%)}. For 11 of our 22 focal species, the scaled distributions of intraspecific effects did not overlap with $0$, suggesting that individuals of those species have a non-trivial effect on other individuals of the same species. \textbf{When considering interspecific interactions with neighbouring focal species, the proportion which did not overlap with $0$ dropped to 32.3\%.}
 
     \subsection{Examples of ecological applications}
 
@@ -282,13 +296,13 @@ We developed a joint modelling framework to estimate pairwise interactions which
     We illustrate a few potential applications of our framework by exploring questions of common ecological relevance with our case study. Each question below highlights some of the advantages of our resulting interaction network: intraspecific interactions, non-symmetrical interactions, and the ability to estimate positive and negative interactions. 
 
     \subsubsection*{Q1. Do abundant natives under-regulate their population density compared to rarer native species?}
-    One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly than rare species \parencite{Yenni2012, Yenni2017}. Hypothetically, this release from intraspecific competition pressure allows them to reach much higher densities than species which strongly compete with themselves. In our case study, we explore this hypothesis by plotting the effect of a species on itself against its density as in Figure \ref{fig:species}.A. Intraspecific interactions are at their weakest when close to $0$. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength. This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high densities through an under-regulation of their population density and are thus likely to be reaching these densities through other means such as access to a larger niche space. 
+    One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly than rare species \parencite{Yenni2012, Yenni2017}. Hypothetically, this release from intraspecific competition pressure allows them to reach much higher densities than species which strongly compete with themselves. In our case study, we explore this hypothesis by plotting the effect of a species on itself against its density as in Fig. \ref{fig:species}.A. Intraspecific interactions are at their weakest when close to $0$. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength. This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high densities through an under-regulation of their population density and are thus likely to be reaching these densities through other means such as access to a larger niche space. 
 
     \subsubsection*{Q2. Which species are keystones in this system?}
-    Keystone species have disproportionately strong effects on other species in their system and the dynamics of the whole ecosystem, based on their abundances \parencite{Power1996, Piraino2002, Libralato2006}. As such their exclusion from a community is expected to create significant changes in species density and composition \parencite{Paine1969}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g.\ \cite{Paine1992}) \textbf{and the inclusion of multiple trophic levels}, we can identify potential candidates by comparing a species' impact on the population growth of other species to its own density \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from its response or sensitivity to neighbours \parencite{Broekman2020}. Figure \ref{fig:species}.B highlights a native species in green, \textit{Gilberta tenuifolia} (GITE), which may be a potential keystone species due to having strongly competitive effects on the rest of the community overall, despite low density. 
+    Keystone species have disproportionately strong effects on other species in their system and the dynamics of the whole ecosystem, based on their abundances \parencite{Power1996, Piraino2002, Libralato2006}. As such their exclusion from a community is expected to create significant changes in species density and composition \parencite{Paine1969}. Though determining which species truly serve keystone roles has historically involved extensive ecological experimentation (e.g.\ \cite{Paine1992}) \textbf{and the inclusion of multiple trophic levels}, we can identify potential candidates by comparing a species' impact on the population growth of other species to its own density \parencite{Libralato2006}. It is important to note that because our framework allows for asymmetrical interactions, we are able to differentiate a species' impact on other species from its response or sensitivity to neighbours \parencite{Broekman2020}. Fig. \ref{fig:species}.B highlights a native species in green, \textit{Gilberta tenuifolia} (GITE), which may be a potential keystone species due to having strongly competitive effects on the rest of the community overall, despite low density. 
 
     \subsubsection*{Q3. Do all exotic species compete with native species?}
-    Though invasive species are expected to compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of exotic species facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017, Wainwright2019}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to the native species in a community. Figure \ref{fig:species}.C plots the sum of a species' competitive effects on neighbours against the sum of its facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). Both species have weak or close-to-median effects on their neighbours compared to other focal species. \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. \textbf{These effects are partly driven by its incredibly high germination rate (over twice as high as any other focal species).}  These results suggest that here at least, the effects of exotic species on native species are complex and species-dependent.
+    Though invasive species are expected to compete with natives \parencite{Naeem2000, Corbin2004, Riley2008, Zheng2015}, several studies have found evidence of exotic species facilitating natives, with cascading effects on other species and net positive effects on ecosystem processes \parencite{Rodriguez2006, Ramus2017, Wainwright2019}. By allowing for positive and negative interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to the native species in a community. Fig. \ref{fig:species}.C plots the sum of a species' competitive effects on neighbours against the sum of its facilitative effects on neighbours. Exotic species are identified in red. Out of these three exotic species, two have overall competitive effects on the community: \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). Both species have weak or close-to-median effects on their neighbours compared to other focal species. \textit{Hypochaeris glabra} (HYPO) on the other hand has strong effects on other species, both competitive and facilitative, and has an overall facilitative contribution to the community. \textbf{These effects are partly driven by its incredibly high germination rate (over twice as high as any other focal species).}  These results suggest that here at least, the effects of exotic species on native species are complex and species-dependent.
 
 
 \section{Discussion}
