updating results with multichain res.

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -272,7 +272,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
         We applied this framework to an annual wildflower community dataset from Western Australia collected in 2016. This dataset contains over 5000 observations of individual plant seed production from 22 different focal species, and the identity and density of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. \textbf{The environmental heterogeneity of this system is well studied \parencite{Dwyer2015} and we thus know that at the local scales across which this system was surveyed, only soil phosphorous, shade and the presence of woody debris impact on diversity and abundance patterns. To account for this known environmental heterogeneity, we randomly thinned plots to decouple abundance and environment effects (refer to Supplementary Methods for further information).} We used our framework to quantify interactions between these 22 focal species and 52 neighbour species, and derived scaled interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \parencite{Levine2009, Bimler2018} which required experimentally-measured species demographic rates. Viable seed production was used as the measure of performance and modelled with a negative binomial distribution and a log link. Further details on the data, the model fitting and the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods \ref{SI:casestudy}.
 
         \paragraph{}
-        \textbf{We fit all three models to the case study data with 4 chains and 7000 iterations, of which the first 5000 were discarded. All parameters for the NDDM-only model converged well; however, some of the $\gamma$ and $B$ parameters for the RIM-only and joint models received $\hat{R}$ values over $1.01$. High $\hat{R}$ values without other warnings are commonly associated with posteriors that are highly correlated and whose geometry is hence difficult to traverse \parencite{Team2022} [this reference is for \url{https://mc-stan.org/misc/warnings.html#r-hat}). The impact of such ``problematic geometries'' however, is dependent on the data at hand, as evidenced by reliable convergence of all models on the simulated data. We explain why this may be the case for the $r$ and $e$ parameters in our case study and how this affects the $\hat{R}$ of $\gamma$ and $B$ in the Supplementary Methods \ref{SI:convergence}. By comparing the fits across models and the resulting posterior distributions of model parameters, we remained comfortable using the joint model estimates returned by multiple chains to further study the interactions underlying the case study data. Supplementary Methods \ref{SI:convergence} goes into further detail in this regard and, in particular, shows how the posterior intervals of the model parameters remain informative despite high $\hat{R}$ values.}
+        \textbf{We fit all three models to the case study data with 4 chains and 7000 iterations, of which the first 5000 were discarded. All parameters for the NDDM-only model converged well; however, some of the $\gamma$ and $B$ parameters for the RIM-only and joint models received $\hat{R}$ values over $1.01$. High $\hat{R}$ values without other warnings are commonly associated with posteriors that are highly correlated and whose geometry is hence difficult to traverse \parencite{Team2022}. The impact of such ``problematic geometries'' however, is dependent on the data at hand, as evidenced by reliable convergence of all models on the simulated data. We explain why this may be the case for the $r$ and $e$ parameters in our case study and how this affects the $\hat{R}$ of $\gamma$ and $B$ in the Supplementary Methods \ref{SI:convergence}. By comparing the fits across models and the resulting posterior distributions of model parameters, we remained comfortable using the joint model estimates returned by multiple chains to further study the interactions underlying the case study data. Supplementary Methods \ref{SI:convergence} goes into further detail in this regard and, in particular, shows how the posterior intervals of the model parameters remain informative despite high $\hat{R}$ values.}
 
 
 
@@ -288,7 +288,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM. When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Fig. \ref{fig:ppcheckmu2}). This is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Fig. \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. \textbf{Interaction estimates between focal species were scaled according to the annual plant population model (Supplementary Methods \ref{SI:casestudy}) into interaction strengths affecting population growth,} and we sampled from each resulting interaction strength distributions to create 1000 samples of the scaled community interaction matrix.
 
     \paragraph{}
-    For our case study, the resulting scaled community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figs. \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction across all samples. Overall, the median strength for 55.2\% of focal $\times$ focal interactions were competitive, making competition the dominant interaction type. The median of 44.8\% of focal $\times$ focal interactions, however, were facilitative. As a result, the median of 48.1\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates its own performance. \textbf{Median intraspecific interaction strength was competitive for $15$ focal species (68.2\%), and facilitative for the remaining $7$ (31.8\%)}. For 11 of our 22 focal species, the scaled distributions of intraspecific effects did not overlap with $0$, suggesting that individuals of those species have a non-trivial effect on other individuals of the same species. \textbf{When considering interspecific interactions with neighbouring focal species, the proportion which did not overlap with $0$ dropped to 32.3\%.}
+    For our case study, the resulting scaled community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figs. \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction across all samples. Overall, the median strength for 55.8\% of focal $\times$ focal interactions were competitive, making competition the dominant interaction type. The median of 44.2\% of focal $\times$ focal interactions, however, were facilitative. As a result, the median of 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates its own performance. \textbf{Median intraspecific interaction strength was competitive for $13$ focal species (59.1\%), and facilitative for the remaining $9$ (40.9\%)}. For 11 of our 22 focal species, the scaled distributions of intraspecific effects did not overlap with $0$, suggesting that individuals of those species have a non-trivial effect on other individuals of the same species. \textbf{When considering interspecific interactions with neighbouring focal species, the proportion which did not overlap with $0$ dropped to 25.5\%.}
 
     \subsection{Examples of ecological applications}
 
@@ -358,7 +358,7 @@ The authors declare no competing interests.
         \begin{centering}
         % Looks like GITE is in larger font???
         \includegraphics[width=0.5\textwidth]{../../3.analyses/figures_mss/networks_C_F.png}
-        \caption{Competitive (A) and facilitative (B) scaled interaction networks estimated from our model framework. Competitive and facilitative interactions (A and B) are shown separately for ease of viewing but were analysed together. Only focal species are included in these networks, arrows point to species $i$ and line thickness denotes interaction strength. Interaction strengths are given as the median over 1000 samples. Purple coloured nodes correspond to highly abundant native species, whereas green nodes indicate potential keystone species.}
+        \caption{Competitive (A) and facilitative (B) scaled interaction networks estimated from our model framework. Competitive and facilitative interactions (A and B) are shown separately for ease of viewing but were analysed together. Only focal species are included in these networks, arrows point to species $i$ and line thickness denotes interaction strength. Interaction strengths are given as the median over 1000 samples. Purple coloured nodes correspond to highly abundant native species, red nodes to exotic species, and the green node indicates a potential keystone species.}
         \label{fig:netwks}
        \end{centering}
     \end{figure}  
