minor changes to text

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -253,7 +253,9 @@ We developed a joint modelling framework to estimate pairwise interactions which
     \subsection{Assessing model convergence}
         \paragraph{}
         \textbf{We first evaluated convergence of the NDD-only model, the RI-only model, and the joint NDD-RI model when fit to simulated data created with the \texttt{simul\_data()} function available in this project's associated GitHub repository. In these test fits, we ran the models with 4 chains and 3000 iterations, of which the first 2000 were discarded. We varied the total number of species and the proportion of unidentifiable interactions across our simulated datasets; when fitting the NDDM-only model, unidentifiable interactions were assigned a value $\beta_{i,j} = 0$. We observed good convergence of the $\gamma$ and $B$ parameters in all models as evaluated by the $\hat{R}$ statistic ($\hat{R} < 1.01$) and visual inspection of traceplots (results not shown here).
-        As expected for the RI-only model and the joint model, our latent variables $r$ and $e$ often showed sign switching. This means that different MCMC chains returned coefficient values which are of the same magnitude but with opposing signs. Whilst this affects the $\hat{R}$ statistic of these $r$ and $e$ parameters, it does not affect the convergence of the resulting interaction parameters (i.e.\ $r_i e_j$), hence why we excluded $r$ and $e$ from our evaluation of convergence. Convergence was slightly more difficult to achieve with certain simulated datasets but this was solved by increasing the \texttt{adapt\_delta} argument, hinting at potentially problematic geometry of the posteriors.}
+        As expected for the RI-only model and the joint model, our latent variables $r$ and $e$ often showed sign switching. This means that different MCMC chains returned coefficient values which are of the same magnitude but with opposing signs. Whilst this affects the $\hat{R}$ statistic of these $r$ and $e$ parameters, it does not affect the convergence of the resulting interaction parameters (i.e.\ $r_i e_j$), hence why we excluded $r$ and $e$ from our evaluation of convergence.}
+        % Convergence was slightly more difficult to achieve with certain simulated datasets but this was solved by increasing the \texttt{adapt\_delta} argument, hinting at potentially problematic geometry of the posteriors.
+
         % DBS: I don't know if the last sentence is detailed enough. Shouldn't we at least give a hint about what "certain simulated datasets" shared in common? I'm imagining something like "...certain simulated datasets (e.g., when X was big) but this..." Alternatively, we do into more detail below so I would consider just removing this last sentence and ending with the sentence that ends "...hence why we excluded...".
 
         % DBS: Do we need to show evidence of this somewhere in the supps? If not, should we add (results not shown here) at the end of the previous sentence?
@@ -324,7 +326,7 @@ We developed a joint modelling framework to estimate pairwise interactions which
     Quantifying the community interaction matrix can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}); weak interactions between species suggest that they are not sharing or competing for many resources, and thus may have large niche differences in the community. \textbf{Moreover, our inclusion of facilitative interactions, which have traditionally been disregarded in plant population models and mathematical frameworks of plant coexistence, provides a means to investigate the prevalence and strength of facilitation across multiple species and how it may act in relation to competition and species diversity.} Recent work suggests facilitation may be more widespread than traditionally thought \parencite{Gross2015, Picoche2020} and is likely to benefit species diversity and stability in some systems \parencite{Coyte2015, Brooker2008}.
 
     \paragraph{}
-    Ultimately, quantifying species interaction networks allows us to apply tools from network theory to help us understand how these interactions drive community-level patterns of density and diversity. Several metrics already exist for describing horizontal network structure such as weighted connectance \parencite{Ulanowicz1991} or relative intransitivity \parencite{Laird2006a}, though these are fewer than for trophic or unweighted networks (e.g.\ \cite{Bersier2002, Delmas2019}). Adapting measures of nestedness or modularity for example to non-sparse networks (as horizontal communities typically are) would allow us to further characterise how interactions and species are organised. These metrics relate to various aspects of stability and could greatly inform us on how diversity is maintained. Likewise, networks also provide several ways of measuring and describing species roles in their communities \parencite{Cirtwill2018a} for example through the use of structural motifs, unique patterns of interacting species which together make up the whole network. Motifs have been found to have important biological meaning in food webs \parencite{Bascompte2005a} but remain to be identified for horizontal networks. 
+    Ultimately, quantifying species interaction networks allows us to apply tools from network theory to help us understand how these interactions drive community-level patterns of density and diversity. Several metrics already exist for describing horizontal network structure such as weighted connectance \parencite{Ulanowicz1991} or relative intransitivity \parencite{Laird2006}, though these are fewer than for trophic or unweighted networks (e.g.\ \cite{Bersier2002, Delmas2019}). Adapting measures of nestedness or modularity for example to non-sparse networks (as horizontal communities typically are) would allow us to further characterise how interactions and species are organised. These metrics relate to various aspects of stability and could greatly inform us on how diversity is maintained. Likewise, networks also provide several ways of measuring and describing species roles in their communities \parencite{Cirtwill2018a} for example through the use of structural motifs, unique patterns of interacting species which together make up the whole network. Motifs have been found to have important biological meaning in food webs \parencite{Bascompte2005a} but remain to be identified for horizontal networks. 
 
 \section*{Acknowledgements}
 
