--- a/4.mss/tex/supps.tex
+++ b/4.mss/tex/supps.tex
@@ -35,7 +35,7 @@
 
     \textbf{The NDD-only model, the RI-only model and the joint model were all run on the case study data with 4 chains and 7000 iterations, of which the first 5000 were discarded. The NDDM converged well with $\hat{R} < 1.01$ for all parameters. Convergence for the RIM-only model was less ideal with few $\gamma$ and $B$ parameters reaching  $\hat{R}$ values below $1.01$, with a median $\hat{R}$ of $1.35$ for values in $\gamma$ and of $1.13$ for elements of $B$. Convergence for the joint model was improved over the RIM, especially for the interaction parameters, with a median $\hat{R}$ of $1.24$ for  values in $\gamma$ and of $1.005$ for elements of $B$. This was achieved by setting \texttt{adapt\_delta = 0.99} and \texttt{maximum\_treedepth = 20}; we did not increase these values beyond as this was unlikely to resolve all convergence difficulties. In addition to the lack of other warnings and the good convergence of these models on simulated data, it stands to reason that the lack of convergence observed here is at least partially due to a difficult geometry of the posteriors. Both the $r$ and $e$ parameters are constrained due to their parameterisation as unit vectors; this means that if a neighbour $j$ only engages in few interactions, uncertainty about its $e_j$ can create uncertainty for the values of $e$ for other neighbours. Similarly, a shift in either $r_i$ or in the values of $e_j$ for all observed neighbours of $i$ can produce similar values in $B$. If one value of $r_i$ gets shifted during sampling, this will necessarily shift all other $r$ values, which may impact $e_j$ and then in turn all other $e$ values, which can then also affect $\gamma_i$. The degree to which this correlation is problematic for $\hat{R}$ will depend intimately on the data at hand.} 
 
-    \textbf{This lack of convergence leads to multi-modal posteriors for those parameters with higher $\hat{R}$, as different chains get ``stuck'' in slightly different local optima. For our case study data, we observed that these local optima were very close and overlapping in both parameter values and in the likelihood which is being maximised (Fig. \ref{fig:parexample}). Indeed, the Monte Carlo standard error for all paramaters always remained lower than the posterior standard deviation, for both the RIM-only and joint model. This means that all parameters were estimated to a higher accuracy than their standard error, and further simulation was unlikely to substantially modify posterior inferences. Furthermore, posterior intervals for these parameters were similar across all models and strongly overlapping. Fig. \ref{fig:gamma_all} shows the posterior intervals of all $\gamma$ parameters across all three models to illustrate this behaviour (showing this for the $B$ parameters would be unwieldy due to the high number of pairwise interactions in our case study). Comparison between all three model estimates was only possible because, whilst the NDDM sets to $0$ all interactions where species were observed to co-occur but the interactions remained unindentifiable, those accounted for less than 5\% of all interactions in the dataset.}
+    \textbf{This lack of convergence leads to multi-modal posteriors for those parameters with higher $\hat{R}$, as different chains get ``stuck'' in slightly different local optima. For our case study data, we observed that these local optima were very close and overlapping in both parameter values and in the likelihood which is being maximised (Fig. \ref{fig:parexample}). Indeed, the Monte Carlo standard error for all parameters always remained lower than the posterior standard deviation, for both the RIM-only and joint model. This means that all parameters were estimated to a higher accuracy than their standard error, and further simulation was unlikely to substantially modify posterior inferences. Furthermore, posterior intervals for these parameters were similar across all models and strongly overlapping. Fig. \ref{fig:gamma_all} shows the posterior intervals of all $\gamma$ parameters across all three models to illustrate this behaviour (showing this for the $B$ parameters would be unwieldy due to the high number of pairwise interactions in our case study). Comparison between all three model estimates was only possible because, whilst the NDDM sets to $0$ all interactions where species were observed to co-occur but the interactions remained unindentifiable, those accounted for less than 5\% of all interactions in the dataset.}
 
 
     \begin{figure}[H]
@@ -69,7 +69,7 @@
         We applied this framework to annual wildflower community dataset from Western Australia. This system is a diverse and well-studied community of annual plants which germinate, grow, set seed and die within approximately 4 months every year. Individual fecundity data were collected in 2016, when 100 50 x 50 cm plots established in the understory of West Perenjori Reserve (29$^o$28'01.3"S 116$^o$12'21.6"E) were monitored over the length of the full field season. The resulting dataset includes between 29 to over 1000 counts of individual plant seed production from 22 different focal species (with a median of 108 observations per species), in addition to the identity and densities of all neighbouring individuals within the interaction neighbourhood of each focal plant. Interaction neighbourhoods varied in radius from 3 to 5 cm depending on the size of the focal species \parencite{Martyn2020}. Total neighbourhood diversity was 71 wildflower species, 19 of which were recorded fewer than 10 times across the whole dataset. The species-specific effects of this latter group of species on focals were deemed negligible due to their extremely low density, they were thus grouped into an 'other' category and their effects on focals averaged. This resulted in 53 potential neighbour identities. \textbf{Plots were randomly positioned across the reserve to capture natural environmental variation in the system.  Major factors known to impact plant composition and within species abundances are soil P concentrations, shade the presence of woody debris \parencite{Dwyer2015}. Natural levels of soil P are very low in this system with elevated P concentrations occurring predominantly on the edge of the reserve near agricultural fields that use P fertiliser. All study plots were placed far from reserve edges to avoid artificially elevated levels of P, which are easy to detect due to an association between high P levels and extensive exotic grass abundances, which are largely absent from the core reserve where this study was conducted. Thus, environmental variation captured by this dataset reflects natural variation in tree cover, soil nutrients and woody debris. To account for confounding effects between plot location and plant density, half of all plots were thinned (a quarter to 60\% abundance and a quarter to 30\%). Thinning did not target any particular species.} 
 
         \paragraph{}
-    	In study systems which allow it, a proportion of interaction neighbourhoods can instead be thinned prior to the experiment to randomly remove neighbouring individuals and provide observations for low-density estimates of interactions. Though this steps is not strictly necessary, thinning certain neighbourhoods can also reduce potential confounding effects between the environment and interactions and thus provide more accurate estimates of interaction effects. Environmental data known to affect performance can also be recorded and included in the model (as a random effect for example) to minimise those confounding effects.
+    	In study systems which allow it, a proportion of interaction neighbourhoods can instead be thinned prior to the experiment to randomly remove neighbouring individuals and provide observations for low-density estimates of interactions. Though this steps is not strictly necessary, thinning certain neighbourhoods can also reduce potential confounding effects between the environment and interactions and thus provide more accurate estimates of interaction effects. \textbf{Environmental data known to affect performance can also be recorded and included in the model \parencite{Bimler2018} to minimise those confounding effects.}
 
         \paragraph{} 
         We required species demographic rates (seed survival and germination) in order to scale model interaction estimates into interaction strengths. Species demographic rates for 16 of our focal species were estimated from a database of field experiments carried out between 2016 and 2019 where seedbags were placed in the field to estimate germination rates, and ungerminated seeds were evaluated in the lab for survivability.  The remaining species were assigned mean demographic rates from these experiments. Further details on the methods used for collecting those seed rates are available in section \ref{SI:germination}.
