--- a/4.mss/tex/supps.tex
+++ b/4.mss/tex/supps.tex
@@ -20,7 +20,8 @@
 
     We make the several observations in addition to comments in the code. Firstly, identifiable interactions (beta\_ij in the code) are defined as a vector, which must then be matched to their correct position in the interaction matrix. This is the role of the icol and irow vectors defined in the data block. Our Github repository also contains the data\_prep.R file, which will show how to create these vectors from appropriate input data. 
     \textbf{Secondly, the code is written to use a negative binomial function (lines 96 and 98, and again 112 and 114) with an exponential inverse link (lines 64 and 77), the latter is equivalent to a log link function. These lines, along with the dispersion parameter (lines 31 and 86, and wherever the negative binomial function is used) must all be modified if a different family and link function are to be used.}
-    Thirdly, we impose the following constraints to improve convergence, avoid over-parameterisation and maintain identifiability of our parameters $r_i$ and $e_j$ \parencite{Huber2004, Kidzinski2020, Niku2021}. \textbf{We define both the effect and the response parameters as unit vectors, which means we only require T-1 degrees of freedom (where T is the total number of neighbour elements) to estimate all effect values and S-1 degrees of freedom (where S is the total number of focal elements) to estimate all response values}. This loss of a degree of freedom arises from the fact that the matrix whose $i,j$-elements are all products $r_i \times e_j$ is of rank 1. Though both latent variables $r_i$ and $e_j$ may be susceptible to sign switching when running the model on multiple chains, estimates for identifiable and unidentifiable interactions should not be affected.
+    Thirdly, we impose the following constraints to improve convergence, avoid over-parameterisation and maintain identifiability of our parameters $r_i$ and $e_j$ \parencite{Huber2004, Kidzinski2020, Niku2021}. \textbf{We define both the effect and the response parameters as unit vectors, which means we only require T-1 degrees of freedom (where T is the total number of neighbour elements) to estimate all effect values and S-1 degrees of freedom (where S is the total number of focal elements) to estimate all response values}. This loss of a degree of freedom arises from the fact that the matrix whose $i,j$-elements are all products $r_i \times e_j$ is of rank 1. Though both latent variables $r_i$ and $e_j$ may be susceptible to sign switching when running the model on multiple chains, estimates for identifiable and unidentifiable interactions should not be affected. \textbf{All $r_i$ and $e_j$'s are multiplied by a unique $weight$ parameter which controls the average strength of the resulting interactions.}
+
 
     \subsection{Assessing parameter identifiability}
     \label{SI:identify}
